--- a/style.css
+++ b/style.css
@@ -3,3 +3,12 @@ body {
     background-color: #282625;
     color:white
   }
+h3{
+    text-align: center;
+    font-size: small;
+}
+img{
+ width: 100%;
+ height: 100%;
+ object-fit: contain;
+}
