--- a/mainpage/style.css
+++ b/mainpage/style.css
@@ -5,20 +5,211 @@
     padding: 0;
   }
   
-  html, body {
-    height: 100%;
+  body{
     margin: 0;
-  }
-  
-  
-  body {
-   
     background-color: #282625;
     color:white
   }
 
+  main{
+   
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
-.container1{
+  }
+.parent-container {
+  width:80vw;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  
+}
+
+.container-logo {
+  margin: 0px 30px 0 30px;
+}
+
+.container-logo img {
+
+}
+
+.container-timer {
+  margin: 50px 20px 20px 100px;
+  background-color: #e65ba4;
+  border-radius: 50px;
+}
+
+h1 {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: bold;
+  font-size: 30px;
+  text-transform: uppercase;
+  text-align:center;
+  margin-top: 30px;
+
+}
+
+.containerNumber{
+  display: flex;
+  justify-content: center;
+  padding: 10px;
+}
+
+input{
+  width: 75px;
+  font-size: 40px;
+  text-align: center;
+  color: #fff;
+}
+
+.time {
+    fill: none;
+    background: transparent;
+    border: none;
+}
+
+/* input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    margin: 0; 
+}
+ */
+
+.semicolon {
+  width: 50px;
+  margin-bottom: 15px;
+  background-color:none;
+  font-size: 30px;
+  text-align: center;
+}
+
+.containerText {
+  display: flex;
+  justify-content:space-around;
+}
+
+.label{
+  color: white;
+  font-family: Arial;
+  font-size: 30px;
+  font-style: bold;
+  margin-top: 25px;
+}
+
+.section-timer{
+  display: flex;
+  justify-content: center;
+  margin: auto;
+}
+
+button {
+  margin: 10px 15px 5px 10px;
+  font-size: 30px;
+  color: #fff;
+  padding: 5px 20px 5px 20px;
+  border: none;
+  border-radius: 7px;
+  background-color: #959597;
+}
+
+
+.active-container{
+  width:80vw;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.workout-container{
+  width:80vw;
+  width: 500px;
+  margin-top: 30px;
+  margin-right: 30px;
+  background-color: #bb274f;
+  border-radius: 50px;
+  padding: 30px;
+
+}
+
+input{
+margin-bottom: 10px;
+}
+
+input[type]{
+background-color: #c9c9c9;
+}
+
+.column3{
+  width: 600px;
+  background-color: #623965;
+}
+
+.workout{
+font-size: 45px;
+text-align: center;
+font-weight: bold;
+font-family: Arial, Helvetica, sans-serif;
+
+}
+
+.buttons {
+display: flex;
+justify-content: center;
+margin: auto;
+margin-top: 15px;
+
+}
+
+.button {
+margin: 5px;
+background-color:hsl(10, 97%, 64%);
+color: white;
+border-color: hsl(10, 91%, 64%);
+border-radius:10px;
+}
+
+h1{
+font-size: 24px;
+color: white;
+margin: 15px 10px 15px 10px;
+}
+
+p{
+text-align: justify;
+margin: 15px 10px 20px 10px;
+}
+
+.calories-container{
+  background-color: #ed562e;
+  width: 500px;
+  margin-top: 30px;
+  border-radius: 50px;
+  padding: 30px;
+  
+}
+
+
+.weather-container{
+  width:80vw;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin: 30px 0 200px 0;
+}
+
+.container-weathermap{
+  background-color: #623965;
+}
+
+.container-progress{
+  background-color: #c09c7f;
+  margin-right: 30px;
+}
+/*.container1{
   display:flex;
   justify-content:center;
   margin: auto;
@@ -58,5 +249,49 @@ input[type]{
       width: 600px;
       background-color: #623965;
   }
+
+.workout{
+  font-size: 45px;
+  text-align: center;
+  font-weight: bold;
+  font-family: Arial, Helvetica, sans-serif;
+  
+
+}
+
+.buttons {
+  display: flex;
+  justify-content: center;
+  margin: auto;
+  margin-top: 15px;
+
+}
+
+.button {
+  margin: 5px;
+  background-color:hsl(10, 97%, 64%);
+  color: white;
+  border-color: hsl(10, 91%, 64%);
+  border-radius:10px;
+}
+
+h1{
+  font-size: 24px;
+  color: white;
+  margin: 15px 10px 15px 10px;
+}
+
+p{
+  text-align: justify;
+  margin: 15px 10px 20px 10px;
+}
+
+.parent { 
+  @media screen (min-width:768px;){
+
+          display: flex;
+  }
+}*/
+
 
  
