--- a/style.css
+++ b/style.css
@@ -12,3 +12,13 @@ img{
  height: 100%;
  object-fit: contain;
 }
+
+#box1{
+background: white;
+margin-bottom: 40px;
+}
+
+#box2 {
+background: white;
+padding-bottom: 300px  
+}
