--- a/mainpage/style.css
+++ b/mainpage/style.css
@@ -6,13 +6,13 @@
   }
   
   body{
+    height: 3000px;
     margin: 0;
     background-color: #282625;
     color:white
   }
 
   main{
-   
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -28,68 +28,90 @@
 }
 
 .container-logo {
-  margin: 0px 30px 0 30px;
+  margin: 0px 30px;
 }
 
 .container-logo img {
 
+
 }
 
-.container-timer {
-  margin: 50px 20px 20px 100px;
+
+#container {
+  width: 600px;
+  margin-top: 50px;
+  margin-left: 200px;
   background-color: #e65ba4;
   border-radius: 50px;
 }
 
-h1 {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+#headline {
+  color:white;
+  font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
-  font-size: 30px;
-  text-transform: uppercase;
+  font-size: 40px;
   text-align:center;
-  margin-top: 30px;
+  margin-top: 70px;
 
 }
 
 .containerNumber{
   display: flex;
   justify-content: center;
-  padding: 10px;
+  
 }
 
 input{
   width: 75px;
-  font-size: 40px;
+  height: 100px;
+  font-size: 70px;
   text-align: center;
   color: #fff;
+
 }
 
-.time {
+#hours, #minutes, #seconds{
     fill: none;
-    background: transparent;
+    background: none;
     border: none;
+    padding: 0px;
+    margin: 0px;
 }
 
-/* input[type=number]::-webkit-inner-spin-button, 
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: rgb(255, 255, 255);
+  opacity: 1; /* Firefox */
+}
+
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+  color: rgb(255, 255, 255);
+}
+
+::-ms-input-placeholder { /* Microsoft Edge */
+  color: white;
+}
+
+input[type=number]::-webkit-inner-spin-button, 
 input[type=number]::-webkit-outer-spin-button { 
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
     margin: 0; 
 }
- */
 
 .semicolon {
   width: 50px;
-  margin-bottom: 15px;
+  align-items: center;
   background-color:none;
-  font-size: 30px;
+  font-size: 40px;
   text-align: center;
+
 }
 
 .containerText {
   display: flex;
-  justify-content:space-around;
+  justify-content: center;
+  
 }
 
 .label{
@@ -97,7 +119,8 @@ input[type=number]::-webkit-outer-spin-button {
   font-family: Arial;
   font-size: 30px;
   font-style: bold;
-  margin-top: 25px;
+  margin-top: 0px;
+  padding: 0px 10px 0px 10px;
 }
 
 .section-timer{
@@ -107,14 +130,26 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 button {
+  font-family: Arial, Helvetica, sans-serif;
   margin: 10px 15px 5px 10px;
   font-size: 30px;
+  font-weight: bold;
   color: #fff;
-  padding: 5px 20px 5px 20px;
+  padding: 10px 30px 10px 30px;
   border: none;
   border-radius: 7px;
-  background-color: #959597;
+  background-color: #e65ba4;
+  margin-bottom: 40px;
 }
+
+#start:hover{
+  background-color: #282625;
+}
+
+#reset:hover{
+  background-color: #282625;
+}
+
 
 
 .active-container{
@@ -125,14 +160,20 @@ button {
 }
 
 .workout-container{
-  width:80vw;
-  width: 500px;
+  width: 600px;
   margin-top: 30px;
-  margin-right: 30px;
+  margin-right: 40px;
   background-color: #bb274f;
   border-radius: 50px;
   padding: 30px;
+}
 
+#workout-title{
+  font-size: 40px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bolder;
+  text-align: center;
+  color: white;
 }
 
 input{
@@ -184,114 +225,71 @@ margin: 15px 10px 20px 10px;
 }
 
 .calories-container{
+  width: 600px;
   background-color: #ed562e;
-  width: 500px;
   margin-top: 30px;
   border-radius: 50px;
   padding: 30px;
   
 }
 
-
 .weather-container{
   width:80vw;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  margin: 30px 0 200px 0;
+  margin-top: 50px;
+
 }
 
-.container-weathermap{
-  background-color: #623965;
-}
 
 .container-progress{
+  width: 600px;
+  height:200px;
   background-color: #c09c7f;
   margin-right: 30px;
+  border-radius: 30px;
+  border-color: none;
+  margin: 30px 20px 50px 20px;
 }
-/*.container1{
-  display:flex;
-  justify-content:center;
-  margin: auto;
+
+#yourprogess{
+  margin-top: 20px;
   margin-left: 20px;
-  margin-right: 20px;
-
+  font-size: 30px;
+  color:white;
+  font-weight: bold;
 }
 
-,column1 {
-  margin: auto 30px auto 0;
+.container-progress input{
+  width:500px;
+  margin-left: 20px;
+  background-color: rgb(211, 195, 192);
 }
 
-img {
-  width:400px;
-  margin-right: 100px;
 
+.container-weathermap{
+  width: 600px;
+  background-color: #623965;
+  border-radius: 50px;
+  border-color: none;
+  margin: 30px 20px 100px 20px;
+}
+#todayWeather{
+  font-size:30px;
+  color:white;
+  font-weight: bold;
+  text-align: center;
 }
 
-.column2{
-      width: 600px;
-      margin-top: 80px;
-      background-color: #bb274f;
-      border-radius: 50px;
-      padding: 30px;
-
-  }
-
-input{
-  margin-bottom: 10px;
+.container-weathermap input{
+  width: 500px;
 }
-
-input[type]{
+.day {
   background-color: #c9c9c9;
 }
 
-.column3{
-      width: 600px;
-      background-color: #623965;
-  }
 
-.workout{
-  font-size: 45px;
-  text-align: center;
-  font-weight: bold;
-  font-family: Arial, Helvetica, sans-serif;
-  
-
-}
-
-.buttons {
-  display: flex;
-  justify-content: center;
-  margin: auto;
-  margin-top: 15px;
-
-}
-
-.button {
-  margin: 5px;
-  background-color:hsl(10, 97%, 64%);
-  color: white;
-  border-color: hsl(10, 91%, 64%);
-  border-radius:10px;
-}
-
-h1{
-  font-size: 24px;
-  color: white;
-  margin: 15px 10px 15px 10px;
-}
-
-p{
-  text-align: justify;
-  margin: 15px 10px 20px 10px;
-}
-
-.parent { 
-  @media screen (min-width:768px;){
-
-          display: flex;
-  }
-}*/
 
 
  
